xprop: please support setting multiple (bitfield?) atoms
Submitted by Michał Górny
Assigned to Xorg Project Team
Description
AFAICS xprop is able to read multiple values for an atom property (separating them in output using ',') but is unable to set multiple values. Could you considering adding such a feature as it was requested by user 1?
Version: git