add support for setting multiple atoms

Now it's possible to set multiple atoms at the same time, with each atom
separated by a comma. Supports extra whitespace, which is simply ignored.

Example:
  xprop -f _NET_WM_STATE 32a -set _NET_WM_STATE '_NET_WM_STATE_ABOVE, _NET_WM_STATE_SKIP_TASKBAR'

Inspired by a patch from Constantin Kulikov <zxnotdead@gmail.com>.

Upstream issue:
<https://gitlab.freedesktop.org/xorg/app/xprop/-/issues/1>

Signed-off-by: tocariimaa <tocariimaa@pissmail.com>